[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Dreamcatcher.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Bed.png" type="Texture" id=2]
[ext_resource path="res://assets/Circle.png" type="Texture" id=3]
[ext_resource path="res://scenes/Level.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Main"
length = 60.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.580392, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 52.2, 56.5, 60 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.203922, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.937255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 52.2, 56.5, 60 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Background:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.74902, -0.25, 0, 0.25, 0, 0.937255, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 52.2, 56.5, 60 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Background:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 52.2, 56.5, 60 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Background:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Background:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Main"
anims/Main = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -520.0
margin_top = -312.0
margin_right = 520.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bed" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, 1.90735e-06 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 2 )

[node name="Circle" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Dreamcatcher" parent="." instance=ExtResource( 1 )]
position = Vector2( 125, 0 )
movement_speed = 4.0
radius = 125.0
rotation_speed = 10.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="LivesLabel" type="Label" parent="."]
margin_left = 448.0
margin_top = -272.0
margin_right = 490.0
margin_bottom = -258.0
text = "3 lives"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
